<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrarUsuarioActivity">

    <TextView
            android:text="@string/create_account_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="96dp"
            android:layout_marginTop="168dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_fullname"
            android:hint="@string/fullname_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4" app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"/>
    <TextView
            android:text="@string/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.32" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.316" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_fullname"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txt_email"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5" app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/user_placeholder"
            android:layout_marginTop="4dp"/>
    <TextView
            android:text="@string/pass_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.277" android:layout_marginTop="32dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txt_password"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6" app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"/>
    <Button
            android:text="Crear Cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_create_account" app:layout_constraintStart_toStartOf="@+id/txt_password"
            app:layout_constraintEnd_toEndOf="@+id/txt_password" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_password" app:layout_constraintHorizontal_bias="0.517"
            android:backgroundTint="@color/colorPrimaryDark"/>
</android.support.constraint.ConstraintLayout>