<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NuevaDenunciaActivity">

    <TextView
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"/>
    <TextView
            android:text="@string/nueva_denuncia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="36dp" android:textSize="24sp"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/nombre_denuncia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.033"
            android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10" app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/denuncia_placeholder"
            android:autofillHints="@string/denuncia_placeholder"/>
    <com.google.android.material.card.MaterialCardView
            android:layout_width="338dp"
            android:layout_height="142dp"
            android:minHeight="200dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintHorizontal_bias="0.491"
            android:id="@+id/materialCardView">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/galeria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView18" android:textSize="24sp"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.gms.maps.MapView
            android:layout_width="326dp"
            android:layout_height="251dp"
            android:id="@+id/mapView" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>