<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity">
    <TextView
            android:text="@string/user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.323" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_user" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/user_placeholder"/>
    <TextView
            android:text="@string/pass_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="96dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.012" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_user"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txt_pass" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_pass" android:backgroundTint="#30BD76"
            app:layout_constraintHorizontal_bias="0.498"/>
    <ImageView
            android:layout_width="191dp"
            android:layout_height="186dp" app:srcCompat="@drawable/imagen_portada"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="92dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/new_to_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"/>
    <TextView
            android:text="@string/crerate_account_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_create_account"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.507" android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>