<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DenunciaActivity">

    <Button
            android:text="@string/denuncias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            android:layout_marginTop="260dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/nueva_denuncia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_nuevaDenuncia" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
            android:layout_marginTop="260dp" app:layout_constraintTop_toTopOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="395dp"
            android:layout_height="407dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <com.google.android.material.card.MaterialCardView
            android:layout_width="302dp"
            android:layout_height="190dp"
            android:layout_marginTop="8dp"
            android:minHeight="200dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="232dp" app:srcCompat="@drawable/foto_perfil_2"
                android:id="@+id/imageView5" android:contentDescription="@string/imagen_perfil"/>
        <TextView
                android:text="@string/imagen_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView11"/>
    </com.google.android.material.card.MaterialCardView>
</android.support.constraint.ConstraintLayout>